tdf#117553 Change navigate behavior when in footnote frame

This patch changes navigate behavior to move to prev/next footnote text
when in footnote frame.

Change-Id: If206098d8817b74ab484a1039371c058d321fda2